# Adminisration_Linux_project

./: README.md
Part1/: part1.1.txt  part1.2.txt  setup  userdef
Part2/CMakeLists/: CMakeLists (2).txt  CMakeLists (3).txt  CMakeLists.txt
Part2/Makefiles/: Makefile  caesar_cipher.mk.mk  xor_cipher.mk.mk
